--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     <div class="container mt-5">
       <h2 class="text-center mb-4">BEST SELLERS</h2>
-      <div class="row">
+      <div class="row rowcard">
         <div class="col-md-3">
           <div class="card">
             <img src="img/BB151.jpg" class="card-img-top" alt="Booster Bundle 151 [INGLES]">
@@ -184,10 +184,10 @@
         </div>
         <div class="col-md-3">
           <div class="card">
-            <img src="img/ETBCZ.jpg" class="card-img-top" alt="Elite Trainer Box Crown Zenith [INGLES]">
+            <img src="img/bbtp.png" class="card-img-top" alt="Booster Box Temporal Forces [INGLES]">
             <div class="card-body">
-              <h5 class="card-title">Elite Trainer Box Crown Zenith [INGLES]</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Precio: $49.00</h6>
+              <h5 class="card-title">Booster Box Temporal Forces [INGLES]</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Precio: $160.00</h6>
               <button type="button" class="btn btn-primary">Mas Informacion</button>
               <button type="button" class="btn btn-primary add-to-cart-btn"
                 data-product-title="Elite Trainer Box Crown Zenith [INGLES]" data-product-price="$49.00">Agregar al
